--- a/index.html
+++ b/index.html
@@ -18,26 +18,60 @@
       media="screen and (min-width: 1440px)"
     />
   </head>
-  
   <body>
-    <section class="main-container">
-      <section class="first">
-        <p>Your Result</p>
-        <div class="centro">
-          <h1>76</h1>
-          <p class="text">of 100</p>
-        </div>
-
-        <h3>Great</h3>
-        <p class="text">
-          You scored higher than 65% of the people who have taken these tests.
-        </p>
-      </section>
-      <section class="second">
-        Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61 / 100 Visual 72 /
-        100 Continue
-      </section>
-    </section>
+    <div class="card">
+      <div class="card-container">
+        <section class="result">
+          <h3 class="title">Your Result</h3>
+          <div class="circle">
+            <h1>76</h1>
+            <p>of 100</p>
+          </div>
+          <b>Great</b>
+          <p class="info">
+            You scored higher than 65% of the people who have taken thest tests.
+          </p>
+        </section>
+        <section class="summary">
+          <h3 class="title">Summary</h3>
+          <div class="rows">
+            <div class="row">
+              <div class="badge">
+                <img src="./assets/images/icon-reaction.svg" alt="icon" /><b
+                  >Reaction</b
+                >
+              </div>
+              <p><b>80</b> / 100</p>
+            </div>
+            <div class="row">
+              <div class="badge">
+                <img src="./assets/images/icon-memory.svg" alt="icon" /><b
+                  >Memory</b
+                >
+              </div>
+              <p><b>92</b> / 100</p>
+            </div>
+            <div class="row">
+              <div class="badge">
+                <img src="./assets/images/icon-verbal.svg" alt="icon" /><b
+                  >Verbal</b
+                >
+              </div>
+              <p><b>61</b> / 100</p>
+            </div>
+            <div class="row">
+              <div class="badge">
+                <img src="./assets/images/icon-visual.svg" alt="icon" /><b
+                  >Visual</b
+                >
+              </div>
+              <p><b>72</b> / 100</p>
+            </div>
+          </div>
+          <button class="btn">Continue</button>
+        </section>
+      </div>
+    </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
